# GP4U-Review

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  package.json  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/customer-cli/: package.json  tsconfig.json
apps/customer-cli/scripts/: install.sh
apps/customer-cli/src/: api.ts  cli.ts  config.ts
apps/provider-agent/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/provider-agent/scripts/: install.sh
apps/provider-agent/src/: __init__.py  agent.py  gpu_discovery.py  job_runner.py  telemetry.py
apps/web/: instrumentation.ts  middleware.ts  next.config.js  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json
apps/web/app/: layout.tsx
apps/web/components/: arbitrage-table.tsx  auth-provider.tsx  chamber-control-panel.tsx  cluster-builder.tsx  error-boundary.tsx  job-card.tsx  ledger-explorer.tsx  qr-invite.tsx  stake-form.tsx  user-menu.tsx  workload-advisor.tsx
apps/web/lib/: api-client.ts  arbitrage.ts  auth-guard.ts  email.ts  formatters.ts  monitoring.ts  rate-limit.ts  stripe.ts  tokens.ts
apps/web/prisma/: schema.prisma
chambers/aetherion/: package.json
chambers/aetherion/src/: index.ts
chambers/energy/: package.json
chambers/energy/src/: index.ts
chambers/mist/: package.json
chambers/mnemo/: package.json
chambers/outerim/: package.json
chambers/veritas/: package.json
docs/: README.md  api-reference.md  pipeline.md  provider-guide.md  roadmap.md  runbook.md  staking-and-slashing.md  zk-attestation.md
(+84 files in other folders)
