[project]
name            = "gp4u-provider-agent"
version         = "0.1.0"
description     = "GP4U Provider Agent — daemon that connects GPU hardware to the GP4U marketplace"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "Proprietary" }

dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "schedule>=1.2.0",
]

[project.scripts]
gp4u-provider = "src.agent:main"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
